<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/birthday_widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/birthday_widget_description">

    <ImageView
        android:id="@+id/birthday_widget_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/birthday_widget_placeholder_background" />

    <TextView
        android:id="@+id/birthday_widget_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="top"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:lineSpacingExtra="1dp"
        android:maxLines="2"
        android:text="@string/birthday_widget_preview_name"
        android:textColor="#242529"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/birthday_widget_date"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="55dp"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/birthday_widget_preview_date"
        android:textColor="#555861"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/birthday_widget_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/birthday_widget_preview_number"
        android:textColor="#242529"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/birthday_widget_days_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/birthday_widget_preview_days"
        android:textColor="#555861"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/birthday_widget_photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/birthday_widget_photo_description"
        android:scaleType="fitCenter"
        android:src="@drawable/birthday_widget_preview_celebration" />
</FrameLayout>
